--- a/server/src/main/resources/messages.lang
+++ b/server/src/main/resources/messages.lang
@@ -18,7 +18,8 @@ join.prompt.footer=&cComp plots are &oonly&c to be used for participating in thi
 &ePlease adhere to the theme and criteria!\n\
 &6If you agree to these rules type: &b/agree {theme}&r\n\
 &d----------------------------------------------------
-join.done=You have joined the comp. Good luck.
+join.done=&aYou have joined the comp: &b{theme}\n\
+&eGood luck and remember to follow the rules!
 join.denied.timeout=&cYou did not accept in time.
 join.denied.full=&cSorry, this comp is full.
 join.denied.not-running=&cSorry, there isn't a comp running.
@@ -48,4 +49,4 @@ info.criteria.format=\u25C9 &e{name}\n\
 # Comp state
 state.open=&a&lOPEN
 state.voting=&3&lVOTING
-state.closed=&c&lCLOSED
+state.closed=&4&lCLOSED
