--- a/server/src/main/resources/messages.lang
+++ b/server/src/main/resources/messages.lang
@@ -1,6 +1,6 @@
 command.require.player=&cOnly players can use this
 
-# Messages for /compjoin
+# Messages for join sign
 join.none=&cThere is no current competition
 join.prompt.header=&d----------------------------------------------------\n\
 &aYou have selected to join a building competition.\n\
@@ -18,8 +18,8 @@ join.prompt.footer=&cComp plots are &oonly&c to be used for participating in thi
 &ePlease adhere to the theme and criteria!\n\
 &6If you agree to these rules type: &b/agree {theme}&r\n\
 &d----------------------------------------------------
-join.done=&aYou have joined the comp: &b{theme}\n\
-&eGood luck and remember to follow the rules!
+join.done=&d»» &aYou have joined the comp: &b{theme}\n\
+&d»» &eGood luck and remember to follow the rules!
 join.denied.timeout=&cYou did not accept in time.
 join.denied.full=&cSorry, this comp is full.
 join.denied.not-running=&cSorry, there isn't a comp running.
@@ -27,14 +27,11 @@ join.denied.already-entered=&aYou have already joined this comp.
 join.denied.token=&cYou did not enter the correct phrase.
 join.denied.whitelist=&cSorry, you aren't whitelisted for this comp.
 
-# Kick messages
-kick.not-running=&cSorry, there isn't a comp running.
-kick.closed=&cThe comp is now closed.
-
 # Confirmation messages
 confirm.none=&cYou have nothing to confirm
 
 # Info command
+info.unknown-server=&cUnknown server, or no comp assigned
 info.none=&7There is no current competition
 info.header=&l{theme} {state}
 info.ends.open=&7Ends &e&l{time} &7(in &e&l{timeleft}&7)
@@ -50,6 +47,9 @@ info.criteria.format=\u25C9 &e{name}\n\
 state.open=&a&lOPEN
 state.voting=&3&lVOTING
 state.closed=&4&lCLOSED
+state.offline=&4&lOFFLINE
+state.full=&4&lFULL
+state.visit=&7&lVISIT
 
 # Voting messages
 vote.denied.state = &cSorry, this competition is not open to voting yet
