Update to support PlotSquared 4+ Remove dependency on Monoliths Chatmessage Api and use in build Paper/Spigot Api's (please note this means Comp must be used with Paper) Fix a number of warnings including moving to java native Optionals v Guava

--- a/server/src/main/resources/messages.lang
+++ b/server/src/main/resources/messages.lang
@@ -2,24 +2,14 @@ command.require.player=&cOnly players can use this
 
 # Messages for join sign
 join.none=&cThere is no current competition
-join.prompt.header=&d----------------------------------------------------\n\
-&aYou have selected to join a building competition.\n\
-Before you join, please look at the criteria of this comp:
-join.prompt.prize=&7First Prize &e&l{prize1}\n\
-&7Second Prize &e&l{prize2}
+join.prompt.header=&d----------------------------------------------------\n\&aYou have selected to join a building competition.\n\Before you join, please look at the criteria of this comp:
+join.prompt.prize=&7First Prize &e&l{prize1}\n\&7Second Prize &e&l{prize2}
 join.prompt.theme=&7The theme is &e&l{theme}
 join.prompt.ends=&7Closes &e&l{time} &7(in &e&l{timeleft}&7)
 join.prompt.criteria.header=&dRequired Criteria:
-join.prompt.criteria.format=\u25C9 &e{name}\n\
-&7&o  {description}
-join.prompt.footer=&cComp plots are &oonly&c to be used for participating in this comp.\n\
-&aUsing a plot for any other purpose may result in an official\n\
-&awarning and prevent you from participating in further comps.\n\
-&ePlease adhere to the theme and criteria!\n\
-&6If you agree to these rules type: &b/agree {theme}&r\n\
-&d----------------------------------------------------
-join.done=&d»» &aYou have joined the comp: &b{theme}\n\
-&d»» &eGood luck and remember to follow the rules!
+join.prompt.criteria.format=\u25C9 &e{name}\n\&7&o  {description}
+join.prompt.footer=&cComp plots are &oonly&c to be used for participating in this comp.\n\&aUsing a plot for any other purpose may result in an official\n\&awarning and prevent you from participating in further comps.\n\&ePlease adhere to the theme and criteria!\n\&6If you agree to these rules type: &b/agree {theme}&r\n\&d----------------------------------------------------
+join.done=&dÂ»Â» &aYou have joined the comp: &b{theme}\n\&dÂ»Â» &eGood luck and remember to follow the rules!
 join.denied.timeout=&cYou did not accept in time.
 join.denied.full=&cSorry, this comp is full.
 join.denied.not-running=&cSorry, there isn't a comp running.
@@ -36,12 +26,9 @@ info.none=&7There is no current competition
 info.header=&l{theme} {state}
 info.ends.open=&7Ends &e&l{time} &7(in &e&l{timeleft}&7)
 info.ends.voting=&7Closes &e&l{time} &7(in &e&l{timeleft}&7)
-info.prize=&7First &e&l{prize1}\n\
-&7Second prize &e&l{prize2}\n\
-&7Participation prize &e&l{prize3}
+info.prize=&7First &e&l{prize1}\n\&7Second prize &e&l{prize2}\n\&7Participation prize &e&l{prize3}
 info.criteria.header=&6Criteria:
-info.criteria.format=\u25C9 &e{name}\n\
-&7&o  {description}
+info.criteria.format=\u25C9 &e{name}\n\&7&o  {description}
 
 # Comp state
 state.open=&a&lOPEN
