--- a/server/src/main/resources/messages.lang
+++ b/server/src/main/resources/messages.lang
@@ -39,12 +39,13 @@ state.full=&4&lFULL
 state.visit=&7&lVISIT
 
 # Voting messages
-vote.denied.state = &cSorry, this competition is not open to voting yet
-vote.denied.no-plot = &cSorry, you need to stand on a comp plot to vote
-vote.denied.no-owner = &cSorry, this plot is not owned. Please choose another plot
-vote.denied.revote = &cSorry, revoting is not permitted in this comp
-vote.done = &aYour vote has been accepted, thank you
-vote.fair = &aPlease vote fairly based on what you see in front of you.
+vote.denied.state=&cSorry, this competition is not open to voting yet
+vote.denied.no-plot=&cSorry, you need to stand on a comp plot to vote
+vote.denied.no-owner=&cSorry, this plot is not owned. Please choose another plot
+vote.denied.revote=&cSorry, revoting is not permitted in this comp
+vote.denied.requirements=&cSorry, you do not meet the requirements to vote.
+vote.done=&aYour vote has been accepted, thank you
+vote.fair=&aPlease vote fairly based on what you see in front of you.
 
 #Teleport Messages
 teleport.no.more.plots = &cSorry, there are no more plots to go to.
