Update to Plotsquared 5

--- a/server/src/main/resources/messages.lang
+++ b/server/src/main/resources/messages.lang
@@ -50,4 +50,5 @@ vote.fair=&aPlease vote fairly based on what you see in front of you.
 #Teleport Messages
 teleport.no.more.plots = &cSorry, there are no more plots to go to.
 teleport.next.plot = &aYou have been teleported to the next plot.
+teleport.failed = &cSorry, teleporting failed.
 teleport.noPlot = &cSorry, you must stand in a plot to tp.
